--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -5,13 +5,12 @@ on:
       - '*'
       - '!*WIP'
 jobs:
-  macos-compilation:
-    runs-on: macos-10.15
-    steps:
-      - uses: actions/checkout@v2
-      - run: make -C philo/
   linux-compilation:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: make -C philo/
+        with:
+          submodules: recursive
+      - name: Install libbsd
+        run: sudo apt-get install libbsd-dev
+      - run: make
